fix msg padrinhos

--- a/padrinhos/index.html
+++ b/padrinhos/index.html
@@ -14,13 +14,9 @@
 </head>
 <body>
     <div id="aceitar">
-      <label class="text">Estão prontos para futuras escolhas e mensagens fofinhas ?</label>
+      <label class="text" style="font-size: 50px;">Estão preparados para escolhas e mensagens fofinhas ?</label>
       <br>
-      <label class="title" onclick="aceitar()"><u>sim</u></lebel>
-      <br>
-      <label class="text">ou</lebel>
-      <br>
-      <label class="title" onclick="aceitar()"><u>sim</u></lebel>
+      <label class="title" style="font-size: 100px;" onclick="aceitar()"><u>sim!</u></lebel>
     </div>
     <div id="content">
       <div class="top">
